kustomize/overlay/internal-profiles/am-only/ds-idrepo-old.yaml
#Patch PingDS idrepo
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ds-idrepo
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: ds
          resources:
            requests:
              memory: 3Gi
              cpu: 2000m
            limits:
              memory: 5Gi
              cpu: 3000
  volumeClaimTemplates:
    - metadata:
        name: data
        annotations:
          pv.beta.kubernetes.io/gid: "0"
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 100Gi
        storageClassName: fast
