kustomize/overlay/internal-profiles/am-only/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    haproxy.router.openshift.io/cookie_name: route
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/session-cookie-hash: sha1
    nginx.ingress.kubernetes.io/session-cookie-name: route
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/enable-cors: "false"
    cert-manager.io/cluster-issuer: $(CERT_ISSUER)
    nginx.ingress.kubernetes.io/body-size: "64m"
    nginx.ingress.kubernetes.io/send-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-body-size: "64m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
  name: forgerock
spec:
  ingressClassName: nginx
  rules:
  - host: $(FQDN)
    http:
      paths:
      - backend:
          service:
            name: am
            port:
              number: 80
        path: /am
        pathType: Prefix
  tls:
  - hosts:
    - $(FQDN)
    secretName: sslcert
